microservices/iwasaki-1/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: iwasaki-1
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "iwasaki-1"
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: service
          servicePort: 8080
